--- a/appjar-maven-plugin/pom.xml
+++ b/appjar-maven-plugin/pom.xml
@@ -1,14 +1,65 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <parent>
-	  <groupId>org.ejmc.maven.appjar</groupId>
-	  <artifactId>appjar-parent</artifactId>
-	  <version>0.0.1-SNAPSHOT</version>
+	<parent>
+		<groupId>org.ejmc.maven.appjar</groupId>
+		<artifactId>appjar-parent</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
 
-  </parent>
+	</parent>
 
-  <artifactId>appjar-maven-plugin</artifactId>
-  <packaging>jar</packaging>
-  <name>AppJar Maven Plugin</name>
+	<artifactId>appjar-maven-plugin</artifactId>
+	<packaging>maven-plugin</packaging>
+
+	<name>AppJar Maven Plugin</name>
+
+
+	<dependencies>
+
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-core</artifactId>
+			<version>3.0</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-plugin-api</artifactId>
+			<version>3.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.maven.plugin-tools</groupId>
+			<artifactId>maven-plugin-annotations</artifactId>
+			<version>3.4</version>
+			<scope>provided</scope>
+		</dependency>
+
+	</dependencies>
+
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-plugin-plugin</artifactId>
+				<version>3.4</version>
+				<executions>
+					<execution>
+						<id>default-descriptor</id>
+						<phase>process-classes</phase>
+					</execution>
+					<execution>
+						<id>help-goal</id>
+						<goals>
+							<goal>helpmojo</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
