--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.sonatype.oss</groupId>
-		<artifactId>oss-parent</artifactId>
-		<version>9</version>
-	</parent>
 
 	<groupId>com.github.emenaceb.appjar</groupId>
 	<artifactId>appjar-parent</artifactId>
@@ -13,19 +8,109 @@
 	<packaging>pom</packaging>
 
 	<name>AppJar</name>
-	<description>Packages an application in a single jar.</description>
 
-	<organization>
-		<name>emenaceb</name>
-		<url>https://github.com/emenaceb</url>
-	</organization>
-
-	<url>https://github.com/emenaceb/appjar</url>
+	<scm>
+		<connection>scm:git:git@github.com:emenaceb/appjar.git</connection>
+		<developerConnection>scm:git:git@github.com:emenaceb/appjar.git</developerConnection>
+		<url>git@github.com:emenaceb/appjar.git</url>
+	</scm>
 
 	<modules>
 		<module>appjar-boot</module>
 		<module>appjar-maven-plugin</module>
 	</modules>
+
+	<build>
+
+		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.6</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>false</autoReleaseAfterClose>
+				</configuration>
+			</plugin>
+
+		</plugins>
+	</build>
+
+	<profiles>
+		<profile>
+			<id>release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>2.10.3</version>
+						<executions>
+							<execution>
+								<id>attach-javadocs</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.6</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
+
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
+
+
+	<description>Packages an application in a single jar.</description>
+	<url>https://github.com/emenaceb/appjar</url>
+
+
+	<organization>
+		<name>emenaceb</name>
+		<url>https://github.com/emenaceb</url>
+	</organization>
 
 	<licenses>
 		<license>
@@ -41,29 +126,5 @@
 			<organizationUrl>https://github.com/emenaceb</organizationUrl>
 		</developer>
 	</developers>
-
-	<scm>
-		<connection>scm:git:git@github.com:emenaceb/appjar.git</connection>
-		<developerConnection>scm:git:git@github.com:emenaceb/appjar.git</developerConnection>
-		<url>git@github.com:emenaceb/appjar.git</url>
-	</scm>
-
-
-	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-gpg-plugin</artifactId>
-					<version>1.5</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-release-plugin</artifactId>
-					<version>2.4.2</version>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
 
 </project>
