--- a/pom.xml
+++ b/pom.xml
@@ -54,25 +54,6 @@
 				</configuration>
 			</plugin>
 
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>license-maven-plugin</artifactId>
-				<version>1.8</version>
-				<configuration>
-					<excludedLicenses>Unknown license</excludedLicenses>
-					<excludedScopes>system|test|provided</excludedScopes>
-					<generateBundle>true</generateBundle>
-					<licenseName>apache_v2</licenseName>
-				</configuration>
-				<executions>
-					<execution>
-						<id>add_third_party</id>
-						<goals>
-							<goal>aggregate-add-third-party</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 
 			<plugin>
 				<groupId>com.mycila</groupId>
@@ -96,6 +77,21 @@
 			</plugin>
 
 		</plugins>
+
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.3</version>
+					<configuration>
+						<source>6</source>
+						<target>6</target>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+
 	</build>
 
 	<profiles>
@@ -127,6 +123,41 @@
 								<goals>
 									<goal>sign</goal>
 								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>license-maven-plugin</artifactId>
+						<version>1.8</version>
+						<configuration>
+							<excludedLicenses>Unknown license</excludedLicenses>
+							<excludedScopes>system|test|provided</excludedScopes>
+							<generateBundle>true</generateBundle>
+							<licenseName>apache_v2</licenseName>
+						</configuration>
+						<executions>
+							<execution>
+								<id>add_third_party</id>
+								<goals>
+									<goal>aggregate-add-third-party</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>com.mycila</groupId>
+						<artifactId>license-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>check_licenses</id>
+								<goals>
+									<goal>check</goal>
+								</goals>
+								<phase>validate</phase>
+								<configuration>
+									<failIfMissing>true</failIfMissing>
+								</configuration>
 							</execution>
 						</executions>
 					</plugin>
