--- a/appjar-boot/pom.xml
+++ b/appjar-boot/pom.xml
@@ -4,7 +4,7 @@
   <parent>
 	  <groupId>com.github.emenaceb.appjar</groupId>
 	  <artifactId>appjar-parent</artifactId>
-	  <version>0.9.0-SNAPSHOT</version>
+	  <version>0.9.0</version>
   </parent>
 
   <artifactId>appjar-boot</artifactId>
