--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.github.emenaceb.appjar</groupId>
 	<artifactId>appjar-parent</artifactId>
-	<version>0.9.0-SNAPSHOT</version>
+	<version>0.9.0</version>
 	<packaging>pom</packaging>
 
 	<name>AppJar</name>
@@ -13,7 +12,8 @@
 		<connection>scm:git:git@github.com:emenaceb/appjar.git</connection>
 		<developerConnection>scm:git:git@github.com:emenaceb/appjar.git</developerConnection>
 		<url>git@github.com:emenaceb/appjar.git</url>
-	</scm>
+	  <tag>v0.9.0</tag>
+  </scm>
 
 	<modules>
 		<module>appjar-boot</module>
