--- a/appjar-maven-plugin/pom.xml
+++ b/appjar-maven-plugin/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.github.emenaceb.appjar</groupId>
 		<artifactId>appjar-parent</artifactId>
-		<version>0.9.1-SNAPSHOT</version>
+		<version>0.9.1</version>
 
 	</parent>
 
