--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.github.emenaceb.appjar</groupId>
 	<artifactId>appjar-parent</artifactId>
-	<version>0.9.2</version>
+	<version>0.9.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>AppJar</name>
@@ -12,7 +12,7 @@
 		<connection>scm:git:git@github.com:emenaceb/appjar.git</connection>
 		<developerConnection>scm:git:git@github.com:emenaceb/appjar.git</developerConnection>
 		<url>git@github.com:emenaceb/appjar.git</url>
-		<tag>v0.9.2</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<modules>
